ajout back et front

--- a/View/front/cactus.html
+++ b/View/front/cactus.html
@@ -9,19 +9,20 @@
 </head> 
 <body>
 
-	<header>
+    <header>
 
         <div class="header">
-            <a href="#default" class="logo">CompanyLogo</a>
+            <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
               <a href="#contact">Contact</a>
               <a href="panier.html">Panier</a>
+              <a href="blog.html">BLOG</a>
+              <a href="login.html">Se Connecter</a>
             </div>
           </div>
           
    </header>
-
 
 <section class="container content-section">
 
