--- a/View/front/plantes.html
+++ b/View/front/plantes.html
@@ -12,11 +12,13 @@
 	<header>
 
         <div class="header">
-            <a href="#default" class="logo">CompanyLogo</a>
+            <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
               <a href="#contact">Contact</a>
-              <a href="#about">Panier</a>
+              <a href="panier.html">Panier</a>
+              <a href="blog.html">BLOG</a>
+              <a href="login.html">Se Connecter</a>
             </div>
           </div>
           
