--- a/View/front/login.html
+++ b/View/front/login.html
@@ -14,23 +14,23 @@
     <input type="checkbox" id="check">
     <div class="login form">
       <header>Login</header>
-      <form action="" method="post">
+      <form action="#">
         <input type="text" placeholder="Enter your email">
         <input type="password" placeholder="Enter your password">
-        <a href="">Forgot password?</a>
+        <a href="#">Forgot password?</a>
         <input type="button" class="button" value="Login">
       </form>
       <div class="signup">
-          Don't have an account?
+        <span class="signup">Don't have an account?
          <label for="check">Signup</label>
-        
+        </span>
       </div>
     </div>
     <div class="registration form">
       <header>Signup</header>
-      <form action="" method="post">
-        <input type="text" placeholder="Enter your FirstName">
-        <input type="text" placeholder="Enter your LastName">
+      <form action="#">
+        <input type="text" placeholder="Enter your fullname">
+        <input type="text" placeholder="Enter your name">
         <input type="text" placeholder="Enter your email">
         <input type="password" placeholder="Create a password">
         <input type="password" placeholder="Confirm your password">
