modification du FrontOffice

--- a/View/front/index.html
+++ b/View/front/index.html
@@ -44,7 +44,7 @@
         <img src="images/deal.jpg" style="width:100%">
         <div class="container">
           <h2>DEALS DU MOIS</h2>
-          <button class="button"><a class="d" href="cactus.html"> voir les produits</button></a>
+          <button class="button"><a class="d" href="produit.html"> voir les produits</button></a>
           
         </div>
       </div>
@@ -56,18 +56,18 @@
         <div class="container">
           <h2>NOS COFFRETS</h2>
          
-          <button class="button"><a class="d" href="cactus.html"> voir les produits</button></a>
+          <button class="button"><a class="d" href="produit.html"> voir les produits</button></a>
         </div>
       </div>
     </div>
     
     <div class="column">
       <div class="card1">
-        <img src="image/succulantes.jpg" style="width:100%">
+        <img src="images/best.png" style="width:100%">
         <div class="container">
           <h2>NOS BEST SELLERS</h2>
          
-        <button class="button"><a class="d" href="cactus.html"> voir les produits</button></a>
+        <button class="button"><a class="d" href="produit.html"> voir les produits</button></a>
         </div>
       </div>
     </div>
