--- a/View/front/panier.html
+++ b/View/front/panier.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 
-	<title>Menu</title>
+	<title>Panier</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 
 </head> 
 <body>
 
-	<header>
+    <header>
 
         <div class="header">
             <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
-              <a href="#contact">Contact</a>
-              <a href="panier.html">Panier</a>
               <a href="blog.html">BLOG</a>
               <a href="login.html">Se Connecter</a>
+              <a href="panier.html" class="fas fa-shopping-cart"></a>
+              <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
           </div>
           
@@ -43,140 +44,5 @@
     </div>
     
 </section>	
-
-
-
-
-
-<footer class="site-footer" style="margin-top: 500px;">
-    <center>
-     <div class="foot">
-         <div class="column1">
-             <p class="p">NOTRE BOUTIQUE</p> 
-             <p>Adresse : 15 rue du château</p>
-             <p>Paris, France 75001</p>
-             <p>Tél : 01 23 45 67 89</p>
-             <p>E-mail :  info@monsite.fr</p>   
-         </div>
- 
-         <div class="column1">
-             <p class="p">HORAIRES </p> 
-             <p>Lun - Ven : 7 h - 22h</p>
-             <p>​​Samedi : 8h - 22h</p>
-             <p>​Dimanche : 8h - 23h</p>           
-         </div>
-     </div>    
-     </center>
-     
- </footer>
-
-
- <script>
-    if (document.readyState == 'loading') {
-document.addEventListener('DOMContentLoaded', ready)
-} else {
-ready()
-}
-
-function ready() {
-var removeCartItemButtons = document.getElementsByClassName('btn-danger')
-for (var i = 0; i < removeCartItemButtons.length; i++) {
-   var button = removeCartItemButtons[i]
-   button.addEventListener('click', removeCartItem)
-}
-
-var quantityInputs = document.getElementsByClassName('cart-quantity-input')
-for (var i = 0; i < quantityInputs.length; i++) {
-   var input = quantityInputs[i]
-   input.addEventListener('change', quantityChanged)
-}
-
-var addToCartButtons = document.getElementsByClassName('shop-item-button')
-for (var i = 0; i < addToCartButtons.length; i++) {
-   var button = addToCartButtons[i]
-   button.addEventListener('click', addToCartClicked)
-}
-
-document.getElementsByClassName('btn-purchase')[0].addEventListener('click', purchaseClicked)
-}
-
-function purchaseClicked() {
-alert('Thank you for your purchase')
-var cartItems = document.getElementsByClassName('cart-items')[0]
-while (cartItems.hasChildNodes()) {
-   cartItems.removeChild(cartItems.firstChild)
-}
-updateCartTotal()
-}
-
-function removeCartItem(event) {
-var buttonClicked = event.target
-buttonClicked.parentElement.parentElement.remove()
-updateCartTotal()
-}
-
-function quantityChanged(event) {
-var input = event.target
-if (isNaN(input.value) || input.value <= 0) {
-   input.value = 1
-}
-updateCartTotal()
-}
-
-function addToCartClicked(event) {
-var button = event.target
-var shopItem = button.parentElement.parentElement
-var title = shopItem.getElementsByClassName('shop-item-title')[0].innerText
-var price = shopItem.getElementsByClassName('shop-item-price')[0].innerText
-var imageSrc = shopItem.getElementsByClassName('shop-item-image')[0].src
-addItemToCart(title, price, imageSrc)
-updateCartTotal()
-}
-
-function addItemToCart(title, price, imageSrc) {
-var cartRow = document.createElement('div')
-cartRow.classList.add('cart-row')
-var cartItems = document.getElementsByClassName('cart-items')[0]
-var cartItemNames = cartItems.getElementsByClassName('cart-item-title')
-for (var i = 0; i < cartItemNames.length; i++) {
-   if (cartItemNames[i].innerText == title) {
-       alert('This item is already added to the cart')
-       return
-   }
-}
-var cartRowContents = `
-   <div class="cart-item cart-column">
-       <img class="cart-item-image" src="${imageSrc}" width="100" height="100">
-       <span class="cart-item-title">${title}</span>
-   </div>
-   <span class="cart-price cart-column">${price}</span>
-   <div class="cart-quantity cart-column">
-       <input class="cart-quantity-input" type="number" value="1">
-       <button class="btn btn-danger" type="button">REMOVE</button>
-   </div>`
-cartRow.innerHTML = cartRowContents
-cartItems.append(cartRow)
-cartRow.getElementsByClassName('btn-danger')[0].addEventListener('click', removeCartItem)
-cartRow.getElementsByClassName('cart-quantity-input')[0].addEventListener('change', quantityChanged)
-}
-
-function updateCartTotal() {
-var cartItemContainer = document.getElementsByClassName('cart-items')[0]
-var cartRows = cartItemContainer.getElementsByClassName('cart-row')
-var total = 0
-for (var i = 0; i < cartRows.length; i++) {
-   var cartRow = cartRows[i]
-   var priceElement = cartRow.getElementsByClassName('cart-price')[0]
-   var quantityElement = cartRow.getElementsByClassName('cart-quantity-input')[0]
-   var price = parseFloat(priceElement.innerText.replace('$', ''))
-   var quantity = quantityElement.value
-   total = total + (price * quantity)
-}
-total = Math.round(total * 100) / 100
-document.getElementsByClassName('cart-total-price')[0].innerText = '$' + total
-}
-</script>
-
-
 </body>
 </html>	
