--- a/View/front/produit.html
+++ b/View/front/produit.html
@@ -2,28 +2,28 @@
 <html>
 <head>
 
-	<title>Menu</title>
-	<link rel="stylesheet" type="text/css" href="css/css.css">
-	<script src="javascript/js.js"></script>
+	<title>produit</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<script src="js.js"></script>
 
 </head> 
 <body>
 
-	<header>
+    <header>
 
         <div class="header">
             <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
-              <a href="#contact">Contact</a>
-              <a href="panier.html">Panier</a>
               <a href="blog.html">BLOG</a>
               <a href="login.html">Se Connecter</a>
+              <a href="panier.html" class="fas fa-shopping-cart"></a>
+              <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
           </div>
           
    </header>
-
 
 <section class="container content-section">
 
@@ -32,30 +32,30 @@
 
 
 			<div class="shop-item">
-				<span class="shop-item-title"> Cactus </span>
+				<span class="shop-item-title"> Cactus1 </span>
 				<img class="shop-item-image" src="image/cac1.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">3</span>
+					<span class="shop-item-price">$13</span>
 					<button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
 				</div>
 			</div>
 
 
 			<div class="shop-item">
-				<span class="shop-item-title"> Cactus </span>
+				<span class="shop-item-title"> Cactus2 </span>
 				<img class="shop-item-image" src="image/cac2.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">$10.99</span>
+					<span class="shop-item-price">$18.99</span>
 					<button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
 				</div>
 			</div>
 
 
 			<div class="shop-item">
-				<span class="shop-item-title"> Cactus </span>
+				<span class="shop-item-title"> Cactus3 </span>
 				<img class="shop-item-image" src="image/cac3.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">$9.99</span>
+					<span class="shop-item-price">$15.99</span>
 					<button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
 				</div>
 			</div>
@@ -63,30 +63,30 @@
 
 
 			<div class="shop-item">
-				<span class="shop-item-title">Cactus </span>
+				<span class="shop-item-title">Cactus4 </span>
 				<img class="shop-item-image" src="image/cac4.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">$1.99</span>
+					<span class="shop-item-price">$19.99</span>
 					<button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
 				</div>
 			</div> 
 
 
 			<div class="shop-item">
-				<span class="shop-item-title"> Cactus </span>
+				<span class="shop-item-title"> Cactus5 </span>
 				<img class="shop-item-image" src="image/cac5.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">$10.99</span>
+					<span class="shop-item-price">$25.99</span>
 					<button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
 				</div>
 			</div>
 
 
 			<div class="shop-item">
-				<span class="shop-item-title"> Cactus </span>
+				<span class="shop-item-title"> Cactus6 </span>
 				<img class="shop-item-image" src="image/cac6.jpg">
 				<div class="shop-item-details">
-					<span class="shop-item-price">$9.99</span>
+					<span class="shop-item-price">$30</span>
 					<button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
 				</div>
 			</div>
@@ -95,45 +95,15 @@
 		</div>
 
 	</section>
+	
+
+
+	
+	
 
 
 
-	<footer class="site-footer">
-		<center>
-		 <div class="foot">
-			 <div class="column1">
-				 <p class="p">NOTRE BOUTIQUE</p> 
-				 <p>Adresse : 15 rue du château</p>
-				 <p>Paris, France 75001</p>
-				 <p>Tél : 01 23 45 67 89</p>
-				 <p>E-mail :  info@monsite.fr</p>   
-			 </div>
 	 
-			 <div class="column1">
-				 <p class="p">HORAIRES </p> 
-				 <p>Lun - Ven : 7 h - 22h</p>
-				 <p>​​Samedi : 8h - 22h</p>
-				 <p>​Dimanche : 8h - 23h</p>           
-			 </div>
-		 </div>    
-		 </center>
-		 
-	 </footer>
-
-
-
-
-
-
-
-
-     <script src="js.js"></script>
-
-
-
-
-
-
 
 </body>
 </html>	
