--- a/View/front/index.html
+++ b/View/front/index.html
@@ -21,9 +21,10 @@
             <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
+              <a href="produit.php">Produits</a>
               <a href="blog.html">BLOG</a>
               <a href="login.html">Se Connecter</a>
-              <a href="panier.html" class="fas fa-shopping-cart"></a>
+              <a href="products.php" class="fas fa-shopping-cart"></a>
               <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
           </div>
@@ -135,26 +136,5 @@
 </footer>
 
 
-<script>
-    var myIndex = 0;
-carousel();
-
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 3000); // Change image every 2 seconds
-}
-if (document.readyState == 'loading') {
-    document.addEventListener('DOMContentLoaded', ready)
-} else {
-    ready()
-}
-</script>
 </body>
 </html>
