--- a/View/front/reclamation.html
+++ b/View/front/reclamation.html
@@ -91,7 +91,7 @@
    <h1 style="text-align: center;">Reclamation</h1>
 
    <div class="container">
-    <form action=" ">
+    <form action="" method="post" onsubmit="return test()">
     <div class="row">
       <div class="col-25">
         <label for="nom"> Nom</label>
@@ -131,13 +131,13 @@
     </div>
     <br>
     <div class="row">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" >
     </div>
     </form>
   </div>
   
 
-
+<script src="js.js"></script>
    
 </body>
 </html>
