--- a/View/back/index.html
+++ b/View/back/index.html
@@ -38,7 +38,7 @@
                             </a>
                             
                         </div>
-                        
+                        <a href="commande.php">liste commande</a>
                     </div>
                    
                     <div class="sb-sidenav-footer">
