--- a/View/back/index.html
+++ b/View/back/index.html
@@ -107,6 +107,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <i class="fas fa-table me-1"></i>
+                          table de livraison
+                        </div>
+                        <div class="card-body">
+                            <table id="datatablesSimple">
+                                <thead>
+                                    <tr>
+                                        <th>IdLivraison</th>
+                                        <th>DateLivraison</th>
+                                        <th>AdresseLivraison</th>
+                                        <th>StatutLvraison</th>
+                                    </tr>
+                                </thead>
+                                
+                                <tbody>
+                                    <tr>
+                                        <td>48455a</td>
+                                        <td>22/04/02</td>
+                                        <td>ariana</td>
+                                        <td>non livrée</td>
+                                        
+                                    </tr>
+                                    
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
