--- a/View/front/panier.html
+++ b/View/front/panier.html
@@ -41,6 +41,7 @@
     <div class="cart-total">
         <strong class="cart-total-title">Total</strong>
         <span class="cart-total-price">$0</span>
+        <button class="button"><a class="d" href="addlivraison.php"> passer la commande</button></a>
     </div>
     
 </section>	
