--- a/View/front/index.html
+++ b/View/front/index.html
@@ -22,7 +22,7 @@
             <div class="header-right">
               <a href="index.html">Home</a>
               <a href="blog.html">BLOG</a>
-              <a href="login.html">Se Connecter</a>
+              <a href="login.php">Se Connecter</a>
               <a href="panier.html" class="fas fa-shopping-cart"></a>
               <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
