--- a/View/front/index.html
+++ b/View/front/index.html
@@ -21,10 +21,9 @@
             <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
               <a href="index.html">Home</a>
-              <a href="produit.php">Produits</a>
+              <a href="view_products.php">Produits</a>
               <a href="blog.html">BLOG</a>
               <a href="login.html">Se Connecter</a>
-              <a href="products.php" class="fas fa-shopping-cart"></a>
               <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
           </div>
