--- a/View/front/historique.html
+++ b/View/front/historique.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css.css" />
-    <title>Reclamation</title>
+    <title>Historique</title>
     <style>
-        * {
+         * {
           box-sizing: border-box;
         }
         
@@ -52,7 +52,7 @@
         
         .col-75 {
           float: left;
-          width: 75%;
+          width: 45%;
           margin-top: 6px;
         }
         
@@ -77,17 +77,15 @@
           border: none;
           border-radius: 4px;
           cursor: pointer;
-          text-align: left;
-          text-decoration: none;
+          float: right;
         }
         .but:hover{
           background-color: #ddd;
         }
-        </style>
+    </style>
 </head>
 <body>
     <header>
-
         <div class="header">
             <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="header-right">
@@ -98,66 +96,37 @@
               <a href="reclamation.html" class="fas fa-headphones"></a>
             </div>
           </div>
-          
    </header>
-
-   <h1 style="text-align: center;">Reclamation</h1>
+   <br>
+  
+   <h1 style="text-align: center;">Historique Reclamation</h1>
 
    <div class="container">
-    <form action="addRec.php" method="post"  >
+    <form action="show.php" method="post" >
     <div class="row">
       <div class="col-25">
         <label for="nom"> Nom</label>
       </div>
       <div class="col-75">
-        <input type="text" id="nom" name="nom" placeholder="votre nom..">
+        <input type="text" id="n" name="n" placeholder="votre nom..">
       </div>
     </div>
     <div class="row">
       <div class="col-25">
-        <label for="prenom"> Prenom</label>
+        <label for="prenom">Prenom</label>
       </div>
       <div class="col-75">
-        <input type="text" id="prenom" name="prenom" placeholder="votre prenom..">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-25">
-        <label for="ville">ville</label>
-      </div>
-      <div class="col-75">
-        <select id="ville" name="ville">
-          <option value="Tunis">Tunis</option>
-          <option value="Ariana">Ariana</option>
-          <option value="Ben arous">Ben arous</option>
-        </select>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-25">
-        <label for="sujet">Sujet du reclamation</label>
-      </div>
-      <div class="col-75">
-        <textarea id="sujet" name="sujet" placeholder="votre reclamation.." style="height:200px"></textarea>
+        <input type="text" id="p" name="p" placeholder="votre prenom..">
       </div>
     </div>
     <br>
     <div class="row">
-        <div class="col-25">
-           <a href="historique.html" class="but">historique</a>
-        </div>
       <div class="col-75">
-        <input type="submit" value="Submit" onclick="test()">
-        
-      </div>
-      
+        <input type="submit" value="Afficher">
+     </div>
     </div>
+    </form>
   </div>
-</form>
 
-
-<script src="js.js"></script>
-   
 </body>
 </html>
