--- a/View/front/reclamation.html
+++ b/View/front/reclamation.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css.css" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Reclamation</title>
     <style>
         * {
@@ -104,7 +106,7 @@
    <h1 style="text-align: center;">Reclamation</h1>
 
    <div class="container">
-    <form action="addRec.php" method="post"  >
+    <form action="addRec.php" method="post" onsubmit="return test()">
     <div class="row">
       <div class="col-25">
         <label for="nom"> Nom</label>
@@ -119,6 +121,14 @@
       </div>
       <div class="col-75">
         <input type="text" id="prenom" name="prenom" placeholder="votre prenom..">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="prenom"> Email</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="email" name="email" placeholder="votre email..">
       </div>
     </div>
     <div class="row">
@@ -144,20 +154,35 @@
     </div>
     <br>
     <div class="row">
+      <div  class="form-group" style="margin-left: 300px;">
+       <div class="g-recaptcha" data-sitekey="6LfFgCopAAAAAL_Ll_Mftl65Y0IBd4zP2fe3RasP"></div>
+      </div>
+    </div>
+    <br>
+    <div class="row">
         <div class="col-25">
            <a href="historique.html" class="but">historique</a>
         </div>
       <div class="col-75">
-        <input type="submit" value="Submit" onclick="test()">
+        <input type="submit" value="Submit" id="submit" name="send">
         
       </div>
       
     </div>
   </div>
 </form>
-
-
-<script src="js.js"></script>
    
 </body>
 </html>
+<script>
+$(document).on('click' , '#submit' , function(){
+
+var response = grecaptcha.getResponse();
+if(response.length==0){
+   alert("please verify you are not a robot")
+   return false;
+}
+})
+
+
+</script>
