--- a/View/front/historique.html
+++ b/View/front/historique.html
@@ -108,7 +108,7 @@
         <label for="nom"> Nom</label>
       </div>
       <div class="col-75">
-        <input type="text" id="n" name="n" placeholder="votre nom..">
+        <input type="text" id="nnom" name="n" placeholder="votre nom..">
       </div>
     </div>
     <div class="row">
@@ -116,7 +116,7 @@
         <label for="prenom">Prenom</label>
       </div>
       <div class="col-75">
-        <input type="text" id="p" name="p" placeholder="votre prenom..">
+        <input type="text" id="prenom" name="p" placeholder="votre prenom..">
       </div>
     </div>
     <br>
@@ -127,6 +127,5 @@
     </div>
     </form>
   </div>
-
 </body>
 </html>
